--- a/style.css
+++ b/style.css
@@ -4,3 +4,16 @@ h1, h2, h3, h4, h5, h6 {
 p, div {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
 }
+
+a:link { 
+    text-decoration: none; 
+  } 
+  a:visited { 
+    text-decoration: none; 
+  } 
+  a:hover { 
+    text-decoration: none; 
+  } 
+  a:active { 
+    text-decoration: none; 
+  }
