--- a/style.css
+++ b/style.css
@@ -5,15 +5,6 @@ p, div {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
 }
 
-a:link { 
-    text-decoration: none; 
-  } 
-  a:visited { 
-    text-decoration: none; 
-  } 
-  a:hover { 
-    text-decoration: none; 
-  } 
-  a:active { 
-    text-decoration: none; 
+a {
+    text-decoration: none;
   }
